Fix button spacing

--- a/src/components/Location.module.scss
+++ b/src/components/Location.module.scss
@@ -4,14 +4,13 @@
     cursor: pointer;
     width: 24px;
     fill: $highlight;
-    margin-top: 3px;
-    margin-left: 2px;
-    margin-right: 2px;
+    margin: 2px;
     border-radius: 5px;
     background-color: $background-dark;
     color: $secondary;
     font-weight: 500;
     padding: 5px;
+    padding-top: 7px;
 }
 
 .location {
